# duck

./: README.md  pyproject.toml
.github/scripts/: bump_version.py
.github/workflows/: version-bump.yml
duck_alt/: __init__.py
